--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,6 +119,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 100%; 
 }
 
 .product-card:hover {
@@ -130,13 +131,15 @@ p {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    object-position: top; 
     border-radius: 8px;
     margin-bottom: 15px;
 }
 
-.product-card h3 {
-    font-size: 1.2rem;
+.product-card h3, .product-card h2, .product-card h4, .product-card h5 {
+    font-size: 1.1rem;
     margin-bottom: 5px;
+    color: white;
 }
 
 .product-card .price {
